codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__default_short_model_status_line.snap
---
source: tui/src/chatwidget/tests/model_display_name_tests.rs
assertion_line: 116
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  luna · /tmp/project · my-session                                              "
