codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__ephemeral_shake_notice.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: rendered
---
⚠ Elide skipped for ephemeral thread; persistent threads are required for
  artifact recovery.
