codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__shake_notice_renders_summary.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: rendered
---
⚠ Shook 2 tool outputs (~1500 tokens freed).
