codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__shake_preview_images.snap
---
source: tui/src/chatwidget/tests/shake_preview_tests.rs
expression: "render_bottom_popup(&chat, 90)"
---
  Shake (images): frees ~47k of 118k (40%), 1 image removed, not recoverable.
  Payback unavailable until a model request reports full-request usage.

  Idle age unavailable; cache state unknown.
  Compact headroom unavailable; conversation counts alone cannot establish it.
  Favor shake when it delays compaction, not simply before /compact.

  Conversation excludes instructions/tools. Costs exclude recovery and output; not plan-
  allowance predictions.


› 1. Shake
  2. Cancel

  enter select · esc back
